fixed breadcumb not wraping bug

--- a/css/style.css
+++ b/css/style.css
@@ -962,6 +962,7 @@ breadcrumbs
 	display: -webkit-inline-box;
 	display: -ms-inline-flexbox;
 	display: inline-flex;
+	flex-wrap: wrap;
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
